fixed overlapping text in ie11

--- a/sass/components/content/_info-page-view.scss
+++ b/sass/components/content/_info-page-view.scss
@@ -57,7 +57,7 @@
   border-style: solid;
   border-color: $caption-bg-color;
   border-width: 1px;
-  img: {
+  img {
     width: 100%;
 
   }
@@ -69,7 +69,7 @@
 @media screen and (max-width: 767px){
   .image-caption-container {
     width: 95%;
-    img: {
+    img {
       width: 100%;
     }
     .caption {
